--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,15 +9,6 @@ header{
 	background-color:white;
 	border: solid 1px #ccc;
 }
-input, textarea{
-	border-radius:5px;
-}
-input[value="John Smith"] {
-	color:#green;
-}
-textarea{
-	width:100%;
-}
 a{
 	text-decoration: none;
 }
@@ -71,9 +62,10 @@ section{
 	padding:10px;
 	background-color:white;
 	display:inline-block;
-	width:650px;
+	width:60%;
 	 border:solid 1px #ddd;
 }
+/********************************************************about**/
 article{
 	
 }
@@ -89,7 +81,7 @@ aside{
 	border: solid 1px #ddd;
 	float:right;
 	display:inline-block;
-	max-width:270px;
+	width:30%;
 	background-color:white;
 	padding:30px;
 }
@@ -103,23 +95,53 @@ aside ul li{
 aside ul li a img{
 	width:50px;
 }
-.item{
-	width:280px;
-	height:280px;
-	background-image: url("http://lorempixel.com/300/300");
-	display:inline-block;
-	padding:10px;
+/**************************************************** portfolio*/
+.portfolio{
+	margin-top:20px;
+	text-align:center;
+	overflow:auto;
 }
-.item img{
-	position:relative;
+.item{
+position:relative;
+float:left;
+margin:10px;
+text-align: center;
+overflow: hidden;
+max-width:45%;
+}
+.item img{;
+
 }
 .item h3{
+	position: absolute;
 	font-size:2em;
 	color:white;
 	padding:20px;
 	background-color:#4aaaa5;
+	bottom:12px;
+	width:100%;
+}
+/**************************************************contact page */
+form{
+	margin-top:20px;
+}
+input, textarea{
+    border: solid 1px rgb(241, 239, 239);
+    margin:10px 0 ;
+    padding:10px;
+
+}
+input[type="submit"] {
+	padding:10px 30px;
+	background-color:#4aaaa5;
+	color: white;
+}
+textarea{
+	width:100%;
+	padding:0;
 }
 
+/********************************************************footer*/
 footer{
 	border-top:solid 10px #4aaaa5;
 	clear:both;
